# AI-Text-Generation-API

./: .gitignore  README.md
ai_text_generation/: .env.sample  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  run.sh
ai_text_generation/app/: __init__.py  config.py  models.py
ai_text_generation/app/repositories/: generated_text_repository.py  user_repository.py
ai_text_generation/app/routes/: auth_routes.py  textgen_routes.py
ai_text_generation/app/routes/schemas/: auth.py  auth_schema.py  text.py  textgen_schema.py
ai_text_generation/app/services/: ai_service.py
ai_text_generation/app/services/ai_providers/: base.py  openai_provider.py
ai_text_generation/app/utils/: auth_utils.py  logger.py  utils.py
ai_text_generation/tests/: conftest.py  test_config.py
ai_text_generation/tests/e2e/: test_e2e.py
ai_text_generation/tests/test_api/: test_textgen.py
ai_text_generation/tests/test_repository/: test_generated_text_repo.py  test_user_repo.py
ai_text_generation/tests/test_service/: test_ai_service.py
ai_text_generation/tests/unit/: test_auth.py  test_model.py  test_textgen.py
