[project]
name = "ai-text-generation"
version = "0.1.0"
description = ""
authors = [
    {name = "Oluwatobi Akintunlese",email = "akintunlesetobi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-smorest (>=0.45.0,<0.46.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "langchain-groq (>=0.2.4,<0.3.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
]

[tool.poetry]
packages = [{include = "ai_text_generation", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning",
    "ignore::DeprecationWarning"
]
